chore: 更新.gitignore并优化界面布局
- 在.gitignore中添加更多Xcode相关文件和目录
- 删除无用的UserInterfaceState.xcuserstate和build.log文件
- 调整InfoPanelView的底部内边距
- 优化ContentView的布局优先级和侧边栏宽度

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 .DS_Store
 build/
 artifacts/
+
+DerivedData/
+*.xcuserstate
+*.xcuserdatad/
+xcuserdata/
+
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xccheckout
+*.xcscmblueprint
+
+.swiftpm/
+.build/
+
+*.log
+build.log
