feat: 添加文件夹树形视图支持并移除E2E测试相关代码
- 新增文件夹树形视图组件(FoldersTreeView)和模型(FolderNode)，支持层级浏览和操作
- 在ImportManagementView中集成树形视图，替换原有平铺列表
- 添加包含子文件夹的切换选项，扩展过滤逻辑支持路径前缀匹配
- 移除所有与E2E测试相关的代码、配置和脚本，包括：
  - 删除CullerUITests测试目标和相关文件
  - 移除e2e.sh测试脚本
  - 清理Xcode配置和Scheme中的UITests引用
  - 删除调试命令和UI测试支持代码
- 更新项目文件以反映上述改动

--- a/Culler/Culler.xcodeproj/xcshareddata/xcschemes/Culler.xcscheme
+++ b/Culler/Culler.xcodeproj/xcshareddata/xcschemes/Culler.xcscheme
@@ -20,16 +20,12 @@
                ReferencedContainer = "container:Culler.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-      </BuildActionEntries>
-   </BuildAction>
-   <TestAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "410"
@@ -37,9 +33,42 @@
                BlueprintName = "CullerUITests"
                ReferencedContainer = "container:Culler.xcodeproj">
             </BuildableReference>
-         </TestableReference>
-      </Testables>
-   </TestAction>
+         </BuildActionEntry>
+      </BuildActionEntries>
+   </BuildAction>
+  <TestAction
+     buildConfiguration = "Debug"
+     selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+     selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+     shouldUseLaunchSchemeArgsEnv = "YES">
+     <Testables>
+        <TestableReference
+           skipped = "NO">
+           <BuildableReference
+              BuildableIdentifier = "primary"
+              BlueprintIdentifier = "410"
+              BuildableName = "CullerUITests.xctest"
+              BlueprintName = "CullerUITests"
+              ReferencedContainer = "container:Culler.xcodeproj">
+           </BuildableReference>
+        </TestableReference>
+     </Testables>
+     <MacroExpansion>
+        <BuildableReference
+           BuildableIdentifier = "primary"
+           BlueprintIdentifier = "400"
+           BuildableName = "Culler.app"
+           BlueprintName = "Culler"
+           ReferencedContainer = "container:Culler.xcodeproj">
+        </BuildableReference>
+     </MacroExpansion>
+     <CommandLineArguments>
+        <CommandLineArgument
+           argument = "-ui-testing"
+           isEnabled = "YES">
+        </CommandLineArgument>
+     </CommandLineArguments>
+  </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
@@ -86,4 +115,3 @@
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
-
