--- a/Culler/Culler.xcodeproj/xcshareddata/xcschemes/CullerUITests.xcscheme
+++ b/Culler/Culler.xcodeproj/xcshareddata/xcschemes/CullerUITests.xcscheme
@@ -16,7 +16,7 @@
       </TestableReference>
     </Testables>
     <MacroExpansion>
-      <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="400" BuildableName="Culler.app" BlueprintName="Culler" ReferencedContainer="container:Culler.xcodeproj">
+      <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="00A" BuildableName="CullerE2E.app" BlueprintName="CullerE2E" ReferencedContainer="container:Culler.xcodeproj">
       </BuildableReference>
     </MacroExpansion>
     <CommandLineArguments>
@@ -26,13 +26,13 @@
   </TestAction>
   <LaunchAction buildConfiguration="Debug" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" launchStyle="0" useCustomWorkingDirectory="NO" ignoresPersistentStateOnLaunch="NO" debugDocumentVersioning="YES" debugServiceExtension="internal" allowLocationSimulation="YES">
     <BuildableProductRunnable runnableDebuggingMode="0">
-      <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="400" BuildableName="Culler.app" BlueprintName="Culler" ReferencedContainer="container:Culler.xcodeproj">
+      <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="00A" BuildableName="CullerE2E.app" BlueprintName="CullerE2E" ReferencedContainer="container:Culler.xcodeproj">
       </BuildableReference>
     </BuildableProductRunnable>
   </LaunchAction>
   <ProfileAction buildConfiguration="Release" shouldUseLaunchSchemeArgsEnv="YES" savedToolIdentifier="" useCustomWorkingDirectory="NO" debugDocumentVersioning="YES">
     <BuildableProductRunnable runnableDebuggingMode="0">
-      <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="400" BuildableName="Culler.app" BlueprintName="Culler" ReferencedContainer="container:Culler.xcodeproj">
+      <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="00A" BuildableName="CullerE2E.app" BlueprintName="CullerE2E" ReferencedContainer="container:Culler.xcodeproj">
       </BuildableReference>
     </BuildableProductRunnable>
   </ProfileAction>
